<resources>
    <string name="app_name">WharToDO</string>
    <string name="home">Home</string>
    <string name="achievement">Achievement</string>
    <string name="packs">Packs</string>
    <string name="profile">Profile</string>
    <string name="setting">Setting</string>
    <string name="sing_out">Sing out</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nickname">NickName</string>
    <string name="avatar">avatar</string>
    <string name="map">Map</string>
    <string name="menu">Menu</string>
    <string name="email">Email</string>
    <string name="phone_num">Phone number</string>
    <string name="password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up.</string>
    <string name="btn_link_to_login">Already registred! Login.</string>
    <string name="welcome">Welcome</string>
    <string name="name">Fullname</string>
    <string name="incorrect_password">Incorrect password</string>
    <string name="field_required">Field required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="registration_complete">Registration complete</string>
    <string name="google_maps_key">AIzaSyCmBDDHrnr-8UHxOIbsBbxYItvvRmebB84</string>
</resources>