<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:gravity="center_horizontal"
        android:id="@+id/nav_home"
        android:title="@string/home" />
    <item
        android:layout_gravity="center"
        android:id="@+id/nav_achievement"
        android:title="@string/achievement"
        />
    <item
        android:layout_gravity="center"
        android:id="@+id/nav_packs"
        android:title="@string/packs" />
    <item
        android:layout_gravity="center"
        android:id="@+id/nav_profile"
        android:title="@string/profile" />

    <item
        android:layout_gravity="center"
        android:id="@+id/nav_setting"
        android:title="@string/setting" />
    <item
        android:layout_gravity="center"
        android:id="@+id/nav_sing_out"
        android:title="@string/sing_out" />




</menu>