<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/f3_menu"
    tools:context=".MainActivity"
    app:theme="@style/NavigationDrawerStyle"
    android:orientation="vertical">
<include
    layout="@layout/navigation_header"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="start"
    />

    <Button
        android:id="@+id/btn_packs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/packs" />
    <Button
        android:id="@+id/btn_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile"/>
    <Button
        android:id="@+id/btn_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setting"/>
    <Button
        android:id="@+id/btn_sing_out"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sing_out"/>


</LinearLayout>